# ADP-Lang

./: .gitignore  README.md  constructeur_projet.py  diagramme constructeur adp.excalidraw
ADP/: .gitignore  CMakeLists.txt  Makefile  constructeur.cadp  main.c  test.txt
ADP/include/: adp.h  constructeur.h  proto.h  stockage.h
ADP/lib/include/: lib.h
ADP/lib/src/: open_file.c  shearch_index_char.c  split.c
ADP/src/: adp.c  constructeur.c  get_fonction.c  set_constructeur.c
ADP/src/constructeur/: constructeur.c  init_constructor.c  set_fonctions.c
programme_d'exemple/: constructeur.adp  constructeur.cadp  main.adp  principal.adp
programme_d'exemple/fonctions/: bonjour-monde.adp  une_fonction.adp
